<resources>
    <string name="app_name">FinalProject</string>
    <string name="button">Button</string>
    <string name="image">TODO</string>
    <string name="sign">TODO</string>
    <string name="enter_the_tower">Enter the tower!</string>
    <string name="speed_mode">Speed mode</string>
    <string name="settings">Settings</string>
    <string name="volume">Volume</string>
    <string name="tower_of_addition">Tower of Addition</string>
    <string name="tower_of_subtraction">Tower of Subtraction</string>
    <string name="tower_of_multiplication">Tower of Multiplication</string>
    <string name="tower_of_math">Tower of Math</string>
    <string name="tower_of_division">Tower of Division</string>
    <string name="board">board</string>
    <string name="game">Game</string>
    <string name="answer1">Answer1</string>
    <string name="answer3">Answer3</string>
    <string name="sample_question">Sample Question</string>
    <string name="answer2">Answer2</string>
    <string name="testtemplate">TestTemplate</string>
    <string name="signbackground">TODO</string>
    <string name="backbutton">TODO</string>
    <string name="aProblem">3 + 3 = ?</string>
    <string name="buttonNum3">TODO</string>
    <string name="buttonNum6">TODO</string>
    <string name="buttonNum9">TODO</string>
    <string name="dProblem1">15 / 5 = ?</string>
    <string name="buttonNum5">TODO</string>
    <string name="buttonNum7">TODO</string>
    <string name="_11_9">11 - 9 = ?</string>
    <string name="_2_x_2">2 x 2 = ?</string>
    <string name="buttonNum4">TODO</string>
    <string name="_4_5">4 + 5 = ?</string>
    <string name="buttonNum8">TODO</string>
    <string name="_7_3">7 - 3 = ?</string>
    <string name="buttonNum2">TODO</string>
    <string name="buttonNum1">TODO</string>
    <string name="_4_x_2">4 x 2 = ?</string>
    <string name="_14_2">14 / 2 = ?</string>
    <string name="_3_4">3 + 4 = ?</string>
    <string name="_12_6">12 - 6 = ?</string>
    <string name="_1_x_7">1 x 7 = ?</string>
</resources>